Corrected Profile Picture Issue.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="10">
     <tr>
-      <td><img src="images/profile_picture.png" alt="Prabha's Profile Picture" height=200px width=200px></td>
+      <td><img src="profile_picture.png" alt="Prabha's Profile Picture" height=200px width=200px></td>
       <td>
         <h1> Prabha </h1>
         <em>
